<resources>
    <string name="app_name">Day5</string>

    <string name="about_button">О программе</string>
    <string name="about_text">
    У лукоморья дуб зелёный;\n
    Златая цепь на дубе том:\n
    И днём и ночью <b>кот учёный</b>\n
    Всё ходит по цепи кругом;\n
    Идёт <b>направо</b> - песнь заводит,\n
    <b>Налево</b> - сказку говорит.</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="second_activity_button">Отправить</string>
    <string name="whom_textView">Кому</string>
    <string name="description_textView">Описание</string>
    <string name="sender_textView">От кого</string>

    <string name="hello_world">Hello world!</string>
</resources>
