<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">

    <TextView
        android:id="@+id/whom_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whom_textView"
        android:layout_marginTop="49dp"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/whom_editText"
        android:layout_below="@+id/whom_textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingLeft="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_textView"
        android:id="@+id/textView2"
        android:layout_below="@+id/whom_editText"
        android:layout_toLeftOf="@+id/about_button"
        android:layout_toStartOf="@+id/about_button"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/descr_editText"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sender_textView"
        android:id="@+id/textView"
        android:layout_below="@+id/descr_editText"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sender_editText"
        android:layout_below="@+id/descr_editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_activity_button"
        android:id="@+id/second_activity_button"
        android:onClick="onClickSecondActivity"
        android:layout_below="@+id/sender_editText"
        android:layout_alignLeft="@+id/sender_editText"
        android:layout_alignStart="@+id/sender_editText"/>

    <Button
        android:id="@+id/about_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_button"
        android:onClick="onClick"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/answer_textView"
        android:layout_below="@+id/second_activity_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp"/>

</RelativeLayout>
